Created some entity, installed some usefull packages, configured database into application DI container and initial migrations applied.

--- a/ShoppingBasketAPI.Api/appsettings.json
+++ b/ShoppingBasketAPI.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=True;Database=ShoppingBasketApiDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
