Added a new project named DTOs and Services. Added Category Service. Added Category service to DI container.

--- a/ShoppingBasketAPI.Api/ShoppingBasketAPI.Api.csproj
+++ b/ShoppingBasketAPI.Api/ShoppingBasketAPI.Api.csproj
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DTOs\ShoppingBasketAPI.DTOs.csproj" />
     <ProjectReference Include="..\ShippingBasketAPI.Data\ShippingBasketAPI.Data.csproj" />
+    <ProjectReference Include="..\ShoppingBasketAPI.Services\ShoppingBasketAPI.Services.csproj" />
   </ItemGroup>
 
 </Project>
