--- a/ShoppingBasketAPI.Api/ShoppingBasketAPI.Api.csproj
+++ b/ShoppingBasketAPI.Api/ShoppingBasketAPI.Api.csproj
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DTOs\ShoppingBasketAPI.DTOs.csproj" />
     <ProjectReference Include="..\ShippingBasketAPI.Data\ShippingBasketAPI.Data.csproj" />
+    <ProjectReference Include="..\ShoppingBasketAPI.DTOs\ShoppingBasketAPI.DTOs.csproj" />
     <ProjectReference Include="..\ShoppingBasketAPI.Services\ShoppingBasketAPI.Services.csproj" />
   </ItemGroup>
 
