Project folder restructured and resolves issues of wrong_naming and project references.

--- a/ShoppingBasketAPI.Services/ShoppingBasketAPI.Services.csproj
+++ b/ShoppingBasketAPI.Services/ShoppingBasketAPI.Services.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ShippingBasketAPI.Data\ShippingBasketAPI.Data.csproj" />
+    <ProjectReference Include="..\ShippingBasketAPI.Data\ShoppingBasketAPI.Data.csproj" />
+    <ProjectReference Include="..\ShoppingBasketAPI.Data\ShoppingBasketAPI.Data.csproj" />
     <ProjectReference Include="..\ShoppingBasketAPI.DTOs\ShoppingBasketAPI.DTOs.csproj" />
   </ItemGroup>
 
