--- a/ShoppingBasketAPI.DTOs/ShoppingBasketAPI.DTOs.csproj
+++ b/ShoppingBasketAPI.DTOs/ShoppingBasketAPI.DTOs.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ShippingBasketAPI.Data\ShippingBasketAPI.Data.csproj" />
+    <ProjectReference Include="..\ShippingBasketAPI.Data\ShoppingBasketAPI.Data.csproj" />
   </ItemGroup>
 
 </Project>
