added product controller with get all product, get product by id, create product action method. added one create request product dto.

--- a/ShoppingBasketAPI.Api/ShoppingBasketAPI.Api.csproj
+++ b/ShoppingBasketAPI.Api/ShoppingBasketAPI.Api.csproj
@@ -24,6 +24,7 @@
 		<ProjectReference Include="..\ShoppingBasketAPI.Data\ShoppingBasketAPI.Data.csproj" />
 		<ProjectReference Include="..\ShoppingBasketAPI.DTOs\ShoppingBasketAPI.DTOs.csproj" />
 		<ProjectReference Include="..\ShoppingBasketAPI.Services\ShoppingBasketAPI.Services.csproj" />
+		<ProjectReference Include="..\ShoppingBasketAPI.Utilities\ShoppingBasketAPI.Utilities.csproj" />
 	</ItemGroup>
 
 </Project>
