--- a/ShoppingBasketAPI.DTOs/ShoppingBasketAPI.DTOs.csproj
+++ b/ShoppingBasketAPI.DTOs/ShoppingBasketAPI.DTOs.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\ShippingBasketAPI.Data\ShoppingBasketAPI.Data.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\ShippingBasketAPI.Data\ShoppingBasketAPI.Data.csproj" />
+		<ProjectReference Include="..\ShoppingBasketAPI.Utilities\ShoppingBasketAPI.Utilities.csproj" />
+	</ItemGroup>
 
 </Project>
