--- a/ShoppingBasketAPI.Services/ShoppingBasketAPI.Services.csproj
+++ b/ShoppingBasketAPI.Services/ShoppingBasketAPI.Services.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.2" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ShippingBasketAPI.Data\ShoppingBasketAPI.Data.csproj" />
