added jwt configuration to di container. added configuration property to application settings.json

--- a/ShoppingBasketAPI.Api/appsettings.json
+++ b/ShoppingBasketAPI.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=True;Database=ShoppingBasketApi;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JWT": {
+    "ValidAudience": "https://localhost:7102",
+    "ValidIssuer": "https://localhost:7102",
+    "Secret": "1E1ADFD9-57AD-4BB8-830D-3FF768D2E7A0"
   }
 }
