added api key in json setting

--- a/ShoppingBasketAPI.Api/appsettings.json
+++ b/ShoppingBasketAPI.Api/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=True;Database=ShoppingBasketApi;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "ApiKey": "D8F21E0D-EDD5-49E5-AAD7-AC4A31459C9F",
   "JWT": {
     "ValidAudience": "https://localhost:7102",
     "ValidIssuer": "https://localhost:7102",
