--- a/ShoppingBasketAPI.Utilities/ShoppingBasketAPI.Utilities.csproj
+++ b/ShoppingBasketAPI.Utilities/ShoppingBasketAPI.Utilities.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
 	</ItemGroup>
 
 </Project>
