--- a/ShoppingBasketAPI.Domain/ShoppingBasketAPI.Domain.csproj
+++ b/ShoppingBasketAPI.Domain/ShoppingBasketAPI.Domain.csproj
@@ -11,4 +11,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\ShoppingBasketAPI.Utilities\ShoppingBasketAPI.Utilities.csproj" />
+	</ItemGroup>
+
 </Project>
