--- a/ShoppingBasketAPI.Services/ShoppingBasketAPI.Services.csproj
+++ b/ShoppingBasketAPI.Services/ShoppingBasketAPI.Services.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
+    <PackageReference Include="Stripe.net" Version="45.1.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.2" />
   </ItemGroup>
 
