--- a/EcommerceAPI.Api/Properties/launchSettings.json
+++ b/EcommerceAPI.Api/Properties/launchSettings.json
@@ -7,6 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
+      "launchBrowser": true,
       "applicationUrl": "http://localhost:5294"
     },
     "https": {
@@ -16,6 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
+      "launchBrowser": true,
       "applicationUrl": "https://localhost:7102;http://localhost:5294"
     },
     "IIS Express": {
@@ -33,7 +35,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:2098",
-      "sslPort": 0
+      "sslPort": 44302
     }
   }
 }
