Products and Categories controller are now under the api versioning. We separated the admin part and the public part using api versioning.

--- a/EcommerceAPI.Api/EcommerceAPI.Api.csproj
+++ b/EcommerceAPI.Api/EcommerceAPI.Api.csproj
@@ -9,6 +9,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Asp.Versioning.Mvc" Version="7.0.0" />
+		<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="7.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
 			<PrivateAssets>all</PrivateAssets>
