--- a/EcommerceAPI.Api/EcommerceAPI.Api.csproj
+++ b/EcommerceAPI.Api/EcommerceAPI.Api.csproj
@@ -11,6 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="Asp.Versioning.Mvc" Version="7.0.0" />
 		<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="7.0.0" />
+		<PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.20">
 			<PrivateAssets>all</PrivateAssets>
