--- a/EcommerceAPI.Services/EcommerceAPI.Services.csproj
+++ b/EcommerceAPI.Services/EcommerceAPI.Services.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.20" />
 		<PackageReference Include="Stripe.net" Version="45.1.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.2" />
