--- a/EcommerceAPI.Api/appsettings.json
+++ b/EcommerceAPI.Api/appsettings.json
@@ -23,7 +23,7 @@
     "Origins": [ "*" ]
   },
   "GoogleAuthInfo": {
-    "ClientId": "",
-    "ClientSecret": ""
+    "ClientId": "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",
+    "ClientSecret": "797761895014-jcq46t5vkh6mmmo1pkrk8m8te4ggigj8.apps.googleusercontent.com"
   }
 }
