--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,9 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-./EcommerceAPI.Api/appsettings.json
 
 
+*./appsettings.json
 # User-specific files
 *.rsuser
 *.suo
