--- a/EcommerceAPI.Api/appsettings.Development.json
+++ b/EcommerceAPI.Api/appsettings.Development.json
@@ -4,5 +4,26 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "ApiKey": "",
+  "JWT": {
+    "ValidAudience": "",
+    "ValidIssuer": "",
+    "Secret": ""
+  },
+  "Stripe": {
+    "SecretKey": "",
+    "PublishableKey": ""
+  },
+  "Cors": {
+    "Origins": [ "*" ]
+  },
+  "GoogleAuthInfo": {
+    "ClientId": "",
+    "ClientSecret": ""
   }
 }
